Added test case for authorization filter. Code coverage 95.6%